fix: ajustar estilos do componente RenderTest para melhor legibilidade e responsividade

--- a/app/Components/RenderTest/renderTeste.module.css
+++ b/app/Components/RenderTest/renderTeste.module.css
@@ -39,11 +39,12 @@
 }
 
 .title {
-  font-size: 1.5rem;
-  color: #222;
-  text-align: center;
-  margin: 1rem;
-  font-weight: bold;
+  font-size: 1rem;
+  line-height: 1.5;
+  white-space: normal; 
+  word-wrap: break-word;
+  color: #000;
+  width: 70%;
 }
 
 .description {
